log
Thu 05 Oct 2023 12:43:45 AM UTC: 
 tests:  0|5
total_score: 0/70
b3e9fe4
Thu 05 Oct 2023 04:53:26 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:59:11: error: expected identifier or ‘(’ before numeric constant
   59 |   for(int 1 = 0 ; i < 9 ; i++){
      |           ^
sudoku.c:59:19: error: ‘i’ undeclared (first use in this function)
   59 |   for(int 1 = 0 ; i < 9 ; i++){
      |                   ^
sudoku.c:59:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d7b42b8
Thu 05 Oct 2023 04:53:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f5b1cbf
Thu 05 Oct 2023 05:38:10 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:27: error: ‘o’ undeclared (first use in this function)
   52 |       int contSubMatrix = o;
      |                           ^
sudoku.c:52:27: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:66:29: error: expected ‘)’ before ‘/’ token
   66 |         int filaSubMatrix (i / 3) * 3 + m / 3;
      |                             ^~
      |                             )
sudoku.c:69:9: error: expected ‘,’ or ‘;’ before ‘if’
   69 |         if(n->sudo[filaSubMatrix][colSubMatrix] == k){
      |         ^~
sudoku.c:67:13: error: unused variable ‘colSubMatrix’ [-Werror=unused-variable]
   67 |         int colSubMatrix = (1 % 3) * 3 + m% 3
      |             ^~~~~~~~~~~~
sudoku.c:52:11: error: unused variable ‘contSubMatrix’ [-Werror=unused-variable]
   52 |       int contSubMatrix = o;
      |           ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c44d72
Thu 05 Oct 2023 05:38:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:69:9: error: expected ‘,’ or ‘;’ before ‘if’
   69 |         if(n->sudo[filaSubMatrix][colSubMatrix] == k){
      |         ^~
sudoku.c:67:13: error: unused variable ‘colSubMatrix’ [-Werror=unused-variable]
   67 |         int colSubMatrix = (1 % 3) * 3 + m% 3
      |             ^~~~~~~~~~~~
sudoku.c:66:13: error: unused variable ‘filaSubMatrix’ [-Werror=unused-variable]
   66 |         int filaSubMatrix = (i / 3) * 3 + m / 3;
      |             ^~~~~~~~~~~~~
sudoku.c:52:11: error: unused variable ‘contSubMatrix’ [-Werror=unused-variable]
   52 |       int contSubMatrix = 0;
      |           ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
200fd12
Thu 05 Oct 2023 05:39:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
34132ed
Thu 05 Oct 2023 05:43:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d623a1d
